# OFS-Photomatrix

./: .gitignore  README.md  check_backend.cmd  check_frontend.cmd  check_users.py  debug.cmd  frontend_diagnostics.cmd  install_backend.cmd  install_frontend.cmd  package-lock.json  package.json  reset_admin_password.py  run_backend.cmd  run_backend_debug.bat  run_backend_persistent.cmd  run_frontend.cmd  run_frontend_persistent.cmd  run_project.cmd  start_backend.cmd  start_frontend.cmd  start_project.cmd  stop_project.cmd  test_auth.py
backend/: alembic.ini  body.json  check_db.py  check_table.py  check_tables.py  clean_positions_functions.py  create_admin.py  create_table.py  db_check.py  drop_table.py  export_all_to_json.bat  export_divisions_to_json.bat  export_divisions_to_json.py  export_positions.bat  export_positions.py  export_positions_direct.bat  export_positions_direct.py  export_positions_to_json.bat  export_positions_to_json.py  export_sections_to_json.bat  export_sections_to_json.py  import_functions.bat  import_functions_from_excel.py  install_dependencies.py  main.py  pyproject.toml  run_simple.cmd  simple_server.py  test_app.py  update_schema.py
backend/app/: __init__.py  initial_data.py  main.py
backend/app/api/: __init__.py  api.py  deps.py
backend/app/core/: config.py  file_utils.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  crud_function.py  crud_user.py  division.py  function.py  functional_assignment.py  functional_relation.py  organization.py  position.py  section.py  staff.py  user.py  (+2 more)
backend/migrations/: env.py
(+379 files in other folders)
